TEST-CONFIG-003: keep YAML fixtures explicit